<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:layout_margin="16dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvPetIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_index"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pet_name"
            android:inputType="textPersonName"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etBreed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pet_breed"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pet_birth"
            android:inputType="date" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
