<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:background="@color/bg_principal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <!-- Título -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/pet_info_title"
            android:textColor="@color/clr_font"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Subtítulo -->
        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_many_pets"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Selector de cantidad -->
        <LinearLayout
            android:id="@+id/layoutStepper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/btnMinus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/btn_principal"
                android:contentDescription="@string/decrease"
                android:src="@drawable/menosblanco"
                android:scaleType="fitCenter"
                android:padding="8dp" />

            <TextView
                android:id="@+id/tvCounter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="1"
                android:textSize="16sp"
                android:gravity="center" />

            <ImageButton
                android:id="@+id/btnPlus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/btn_principal"
                android:src="@drawable/masblanco"
                android:contentDescription="@string/increase"
                android:scaleType="fitCenter"
                android:padding="8dp" />
        </LinearLayout>

        <!-- Contenedor dinámico para tarjetas -->
        <LinearLayout
            android:id="@+id/petContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/layoutStepper"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Botón siguiente -->
        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintTop_toBottomOf="@id/petContainer"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/btn_principal"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
